[gd_scene load_steps=8 format=1]

[ext_resource path="res://script/tube.gd" type="Script" id=1]
[ext_resource path="res://art/map2.png" type="Texture" id=2]
[ext_resource path="res://art/map1.png" type="Texture" id=3]
[ext_resource path="res://sound/add_score.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 40, 191 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 40, 197 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 20, 57 )

[node name="tube" type="Node2D"]

transform/pos = Vector2( 400, 0 )
script/script = ExtResource( 1 )
speed = 200
tube_wight = 128

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
flip_v = true

[node name="Sprite2" type="Sprite" parent="."]

transform/pos = Vector2( 0, 128 )
texture = ExtResource( 2 )
centered = false
flip_v = true

[node name="Sprite3" type="Sprite" parent="."]

transform/pos = Vector2( 0, 256 )
texture = ExtResource( 3 )
centered = false
flip_v = true

[node name="Sprite5" type="Sprite" parent="."]

transform/pos = Vector2( 0, 512 )
texture = ExtResource( 3 )
centered = false

[node name="Sprite6" type="Sprite" parent="."]

transform/pos = Vector2( 0, 640 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite7" type="Sprite" parent="."]

transform/pos = Vector2( 0, 768 )
texture = ExtResource( 2 )
centered = false

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 64, 193 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 64, 709 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 64, 193 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 64, 709 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="Area2D2" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 97, 447 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]

transform/pos = Vector2( 97, 447 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="add_score" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_enter" from="Area2D2" to="." method="_on_Area2D2_body_enter"]


